<resources>
    <string name="app_name">MT_webncrafts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="view_all">View all</string>
    <string name="sale">Sale </string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="offers">Offers</string>
    <string name="account">Account</string>
</resources>